@@ -60,7 +60,7 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
                 this.token = server.createToken(this);}
             else if(isnew.equals("false")){
                 flag=0;
-                System.out.println(stringcostant.name_is_not_valid);}
+                System.err.println(stringcostant.name_is_not_valid);}
             else{
                 this.token = isnew;
                 int port = server.getPort(token);
@@ -73,116 +73,22 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
             }
         return flag;
     }
-    /*private void gameAccess(String player_name) throws IOException, NotBoundException {
-        if(newClient) {
-            makeChoice(player_name);
-            System.out.print("[SUCCESS] YOUR PLAYER HAS BEEN CREATED!\n");}
-    }*/
-    public boolean areThereFreeGames () throws IOException, NotBoundException {
-        if (server.getFreeGames() == null || server.getFreeGames().isEmpty()) {
-            return false;
-        }
-        return true;
+
+    public boolean areThereFreeGames () throws IOException {
+        return server.getFreeGames() != null && !server.getFreeGames().isEmpty();
     }
-    private void chooseMatch(String player_name) throws IOException, NotBoundException {
-        Scanner scan = new Scanner(System.in);
-        boolean check;
-        System.out.println("\nEXISTING GAMES: ");
-        List<GameServer> partite = server.getFreeGames();
-        for ( VirtualGameServer r : partite) {
-            System.out.println( r.getController().getGame().getName() + " ID:" + r.getController().getGame().getIndex_game()
-                    + " " + r.getController().getGame().getNumPlayer() + "/" + r.getController().getGame().getMax_num_player() );
-        }
-        do {
-            System.out.println("\nINSERT GAME ID > ");
-            int ID = scan.nextInt();
-            check = server.findRmiController(ID, token, player_name,this);
-        }while(!check);
-        int port = server.getPort(token);
+
+
+    public List<SocketRmiControllerObject> getFreeGames() throws IOException {return server.getFreeGamesSocket();}
+    public void createGame(String game_name, int numplayers, String player_name) throws IOException, NotBoundException {
+        int port;
+        port = server.createGame(game_name, numplayers, token, player_name,this);
         Registry registry = LocateRegistry.getRegistry(Constants.IPV4, port);
         this.rmi_controller = (VirtualGameServer) registry.lookup(String.valueOf(port));
         rmi_controller.connectRMI(this);
     }
 
-    public List<SocketRmiControllerObject> getFreeGames() throws IOException {
-        return server.getFreeGamesSocket();
-    }
-    public void createGame(String game_name, int numplayers, String player_name) throws IOException, NotBoundException {
-                int port;
-                port = server.createGame(game_name, numplayers, token, player_name,this);
-                Registry registry = LocateRegistry.getRegistry(Constants.IPV4, port);
-                this.rmi_controller = (VirtualGameServer) registry.lookup(String.valueOf(port));
-                rmi_controller.connectRMI(this);
-    }
-    
-    private void waitFullGame() throws IOException, InterruptedException {
-        
-        Scanner scan = new Scanner(System.in);
-        if(miniModel.getState().equals("NOT_INITIALIZED")) {
-            System.out.print("[WAIT FOR OTHER PLAYERS]\n");
-            while (miniModel.getState().equals("NOT_INITIALIZED")) {
-                buffering();
-            }
-            System.out.println("\n[GAME IS FULL, YOU ARE ABOUT TO START]!\n");
-        }
-        miniModel.setGameField(rmi_controller.getGameFields(token));
-        startCheckingMessages();
-    }
-    private void chooseGoalState() throws IOException, InterruptedException {
-        if(miniModel.getState().equals("CHOOSE_GOAL")) {
-            if(rmi_controller.getTtoP().get(token).getGoalCard()==null) {
-                chooseGoal();
-                System.out.println("\nYOU CHOOSE :" + rmi_controller.getTtoP().get(token).getGoalCard().toString());
-            }
-            while (miniModel.getState().equals("CHOOSE_GOAL")) {
-                buffering();
-            }
-        }
-    }
-    private void chooseStartingCardState() throws IOException, InterruptedException {
-        if(miniModel.getState().equals("CHOOSE_SIDE_FIRST_CARD")) {
-            if(!rmi_controller.getTtoP().get(token).isFirstPlaced()) {
-                chooseStartingCard();
-            }
-            while (miniModel.getState().equals("CHOOSE_SIDE_FIRST_CARD")) {
-                buffering();
-            }
-        }
-    }
-    private void chooseGoal() throws IOException {
-        Scanner scan = new Scanner(System.in);
-        int done=0;
-        while(done==0) {
-            System.out.println("\nCHOOSE YOUR GOAL:\n 1-" + rmi_controller.getTtoP().get(this.token).getInitial_goal_cards().get(0).toString()
-                    + "\n 2-" + rmi_controller.getTtoP().get(this.token).getInitial_goal_cards().get(1).toString());
-            String choice = scan.nextLine();
-            if (choice.equals("1")) {
-                done=1;
-                rmi_controller.chooseGoal(token,0);
-            } else if (choice.equals("2")){
-                done=1;
-                rmi_controller.chooseGoal(token,1);
-            } else System.out.println("[ERROR] WRONG INSERT!");
-        }
-    }
-    private void chooseStartingCard() throws IOException{
-        Scanner scan = new Scanner(System.in);
-        System.out.println("\nCHOOSE STARTING CARD SIDE:\n");
-        rmi_controller.showStartingCard(token);
-        int done=0;
-        while(done==0){
-            System.out.println("\n-'B' FOR BACK SIDE \n-'F' FOR FRONT SIDE:");
-            String dec = scan.nextLine();
-            if (dec.equals("F")||dec.equals("f")){
-                done=1;
-                rmi_controller.chooseStartingCard(token,false);
-            } else if (dec.equals("B")||dec.equals("b")){
-                done=1;
-                rmi_controller.chooseStartingCard(token,true);
-            }
-            else System.out.println("[ERROR] WRONG INSERT!");
-        }
-    }
+
     public void manageGame(boolean endgame) throws IOException {
         if(endgame) rmi_controller.getPoints(token);
         else rmi_controller.getFinalStandings(token);
@@ -204,16 +110,13 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
 
     public void connectGameServer() throws IOException, NotBoundException {
         int port = server.getPort(token);
-        Registry registry = LocateRegistry.getRegistry("127.0.0.1", port);
+        Registry registry = LocateRegistry.getRegistry(Constants.IPV4, port);
         this.rmi_controller = (VirtualGameServer) registry.lookup(String.valueOf(port));
         rmi_controller.connectRMI(this);
     }
 
     public boolean isGoalCardPlaced() throws IOException {
-        if(rmi_controller.getTtoP().get(token).getGoalCard()==null){
-            return true;
-        }
-        return false;
+        return rmi_controller.getTtoP().get(token).getGoalCard() == null;
     }
 
     public String getGoalPlaced() throws IOException {
@@ -222,7 +125,7 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
 
     @Override
     public String getFirstGoal() throws IOException {
-        return rmi_controller.getTtoP().get(this.token).getInitial_goal_cards().get(0).toString();
+        return rmi_controller.getTtoP().get(this.token).getInitial_goal_cards().getFirst().toString();
     }
 
     @Override
@@ -260,22 +163,10 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
         new Thread(() -> {
             while (true) {
                 try {
-                    Thread.sleep(100);
                     ResponseMessage s = miniModel.popOut();
-                    if(s!=null){
-                        if( s instanceof  GameFieldMessage){
-                            showField(((GameFieldMessage) s).getField());
-                        }
-                        if ( s instanceof ErrorMessage){
-                            printString(s.getMessage());
-                        }
-                        if ( s instanceof UpdateMessage){
-                            printString(s.getMessage());
-                        }
-                    }
-                } catch (InterruptedException e) {
-                    System.err.println("impossible to pop out");
-                }
+                    if(s!=null) s.action();
+                } catch (IOException e) {throw new RuntimeException(e);}
+                try {Thread.sleep(100);} catch (InterruptedException e) {throw new RuntimeException(e);}
             }
         }).start();
     }
@@ -290,18 +181,14 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
                 } catch (IOException | InterruptedException e) {
                     if(cracked==0) {
                         cracked = 1;
-                        System.err.println("Network disconnected");
+                        System.err.println("[SERVER ERROR] SERVER DISCONNECTED");
                     }
                 }
             }
         }).start();
     }
 
-    public void setGameFieldMiniModel() throws IOException {
-        miniModel.setGameField(rmi_controller.getGameFields(token));
-    }
-
-
+    public void setGameFieldMiniModel() throws IOException {miniModel.setGameField(rmi_controller.getGameFields(token));}
 
     //SETTERS
 
@@ -318,34 +205,38 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
         else{rmi_controller.chattingMoment(miniModel.getMy_index(), decision, new ChatMessage(message, miniModel.getMy_player()));}
     }
 
-
-    private ChatMessage insertMessage() {
-        Scanner scan = new Scanner(System.in);
-        System.out.println("Insert message to send:");
-        String s = scan.nextLine();
-        return new ChatMessage(s);
-    }
-
-    private void buffering() throws IOException, InterruptedException{
-        Thread.sleep(1000);
-        System.out.print("\b");
-        System.out.print("/");
-        Thread.sleep(1000);
-        System.out.print("\b");
-        System.out.print("|");
-        Thread.sleep(1000);
-        System.out.print("\b");
-        System.out.print("\\");
-        Thread.sleep(1000);
-        System.out.print("\b");
-        System.out.print("-");
-    }
     @Override
     public void showUpdate(GameField gamefield) {}
     @Override
     public void reportError(String details) {System.err.print("\n[ERROR] " + details + "\n> ");}
     @Override
     public void reportMessage(String details) {System.out.print("\n[ERROR] " + details + "\n> ");}
+
+    public MiniModel getMiniModel() {return miniModel;}
+    public VirtualGameServer getGameServer(){ return rmi_controller;}
+    private void showCardsInCenter() throws IOException {rmi_controller.showCardsInCenter(token);}
+    public void printString(String s) {System.out.println(s);}
+
+    public void addChat(int idx, ChatMessage message) throws IOException{
+        miniModel.addChat(idx, message);
+    }
+
+    public void insertId(int id) throws IOException{
+        miniModel.setMy_index(id);
+    }
+
+    public void insertNumPlayers(int numPlayersMatch) throws IOException{
+        miniModel.setNum_players(numPlayersMatch);
+    }
+
+    public void insertPlayer(Player player) throws IOException{
+        miniModel.setMy_player(player);
+    }
+
+    public String getToken(){
+        return token;
+    }
+
     @Override
     public void showCard(PlayCard card) {
         Side back = card.getBackSide();
@@ -431,39 +322,12 @@ public class RmiClientF extends UnicastRemoteObject implements VirtualViewF {
             }
         }
     }
-    public MiniModel getMiniModel() {return miniModel;}
-    public VirtualGameServer getGameServer(){ return rmi_controller;}
-    private void showCardsInCenter() throws IOException {rmi_controller.showCardsInCenter(token);}
-    public void printString(String s) {System.out.println(s);}
-
-    public void addChat(int idx, ChatMessage message) throws IOException{
-        miniModel.addChat(idx, message);
-    }
-
-    public void insertId(int id) throws IOException{
-        miniModel.setMy_index(id);
-    }
-
-    public void insertNumPlayers(int numPlayersMatch) throws IOException{
-        miniModel.setNum_players(numPlayersMatch);
-    }
-
-    public void insertPlayer(Player player) throws IOException{
-        miniModel.setMy_player(player);
-    }
-
-
-
-
     //MAIN
     public static void main(String[] args) throws IOException, NotBoundException, InterruptedException {
-        Registry registry = LocateRegistry.getRegistry("127.0.0.1", 1);
+        Registry registry = LocateRegistry.getRegistry(Constants.IPV4, 1);
         VirtualServerF server = (VirtualServerF) registry.lookup("VirtualServer");
         new RmiClientF(server).run();
     }
 
-    public String getToken(){
-        return token;
-    }
 }
 
